ms-articulos/k8s/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-articulos-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-articulos
  template:
    metadata:
      labels:
        app: ms-articulos
    spec:
      volumes:
        - name: truststore
          secret:
            secretName: coopetarrazu-ca

      containers:
        - name: ms-articulos
          image: 10.1.10.13:5000/ms-articulos:v1.0.0

          volumeMounts:
            - name: truststore
              mountPath: /certs

          ports:
            - containerPort: 80
          imagePullPolicy: Always
