ms-articulos/k8s/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-articulos-svc
spec:
  type: ClusterIP
  selector:
    app: ms-articulos
  ports:
    - protocol: TCP
      name: main
      port: 80
      targetPort: 80
