ms-articulos/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-articulos-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: "nginx-externo" # Asegúrate de que esta línea esté presente
  tls:
    - hosts:
        - inventario.coopetarrazu.dev
      secretName: articulos-tls-secret
  rules:
    - host: inventario.coopetarrazu.dev
      http:
        paths:
          - path: /articulos
            pathType: Prefix
            backend:
              service:
                name: ms-articulos-svc
                port:
                  number: 80
          - path: /cajas
            pathType: Prefix
            backend:
              service:
                name: ms-articulos-svc
                port:
                  number: 80
